syntax = "proto3";

service Order {
    rpc CreateOrder (OrderRequest) returns (OrderResponse) {}
}

message OrderRequest {
    int64 userID = 1;
    int64 productID = 2;
}

message OrderResponse {
    int64 id = 1;
    int64 createdAt = 2;
    int64 updatedAt = 3;
    int64 userID = 4;
    int64 productID = 5;
    string status = 6;
}